@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.8
 
+  *) mod_authnz_dbd: Support the expression parser within the require
+     directives. [Graham Leggett]
+
   *) mod_authnz_ldap: Support the expression parser within the require
      directives. [Graham Leggett]
 
